--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10817,7 +10817,7 @@ POR_a_divided_destiny_desc:0 "WIP"
 POR_ensure_republican_aid:0 "Ensure Republican Aid"
 POR_ensure_republican_aid_desc:0 "WIP"
 POR_monarchy_till_death:0 "Monarchy Till Death"
-POR_monarchy_till_death_desc:0 "WIP"
+POR_monarchy_till_death_desc:0 "The vile republicans have been a thorn in our side for too long. They shall be punished for their murder of our dear Carlos I and Prince Luis Filipe. "
 POR_looming_insurrection:0 "Looming Insurrection"
 POR_looming_insurrection_desc:0 ""
 POR_republican_revolt:0 "Republican Revolt"
@@ -10837,23 +10837,23 @@ POR_rising_from_the_ashes_desc:0 ""
 POR_the_deutschland_focus:0 "The Deutschland Focus"
 POR_the_deutschland_focus_desc:0 ""
 POR_portugiesisch_tactics:0 "Portugiesisch Tactics"
-POR_portugiesisch_tactics_desc:0 ""
+POR_portugiesisch_tactics_desc:0 "Due to the lacklustre state of the Portugese military, Berlin has offered "
 POR_failures_of_the_republic:0 "Failures Of The Republic"
-POR_failures_of_the_republic_desc:0 "the failures of the Republic are plain to see. It was too weak and divided. there will be no such problems in the new Portugal."
+POR_failures_of_the_republic_desc:0 "The failures of the Republic are plain to see. It was too weak and divided. There will be no such problems in the new Portugal."
 POR_hamburg-porto_telegram:0 "Hamburg-Porto Telegram"
 POR_hamburg-porto_telegram_desc:0 ""
 POR_utilise_german_assets:0 "Utilise German Assets"
-POR_utilise_german_assets_desc:0 ""
+POR_utilise_german_assets_desc:0 "Our new friendship with Berlin has provided many benefits, both military and economic. extending these ties further would be only logical "
 POR_towards_lusitanian_ambitions:0 "Towards Lusitanian Ambitions"
 POR_towards_lusitanian_ambitions_desc:0 ""
 POR_stir_revanchist_sentiments:0 "Stir Revanchist Sentiments"
 POR_stir_revanchist_sentiments_desc:0 ""
 POR_operation_iberico:0 "Operation Iberico"
-POR_operation_iberico_desc:0 ""
+POR_operation_iberico_desc:0 "The preparations for the invasion of Spain our almost complete. While the Spanish Army is weak, its likely other states will intervene, which is why the campaign must be conducted as quickly as possible."
 POR_realise_long_lost_aims:0 "Realise Long Lost Aims"
 POR_realise_long_lost_aims_desc:0 ""
 POR_abolish_the_treaty_of_badajoz:0 "Abolish The Treaty Of Badajoz"
-POR_abolish_the_treaty_of_badajoz_desc:0 "In 1801, Portugal was unfairly robbed of border territories by the Spanish and their French allies. Our attempts to regain it at the Congress of Vienna went unsupported by British. Its time this mistake was rectified."
+POR_abolish_the_treaty_of_badajoz_desc:0 "In 1801, Portugal was unfairly stripped of border territories by the Spanish and their French allies. Our attempts to regain it at the Congress of Vienna went unsupported by British. Its time this mistake was rectified."
 POR_linguistic_associations:0 "Linguistic Associations"
 POR_linguistic_associations_desc:0 ""
 POR_instigate_insurrections:0 "Instigate Insurrections"
@@ -10867,7 +10867,7 @@ POR_revoke_the_1890_ultimatum_desc:0 "The British and their allies our embroiled
 POR_the_austral_campaign:0 "The Austral Campaign"
 POR_the_austral_campaign_desc:0 ""
 POR_reconnect_the_exclave:0 "Reconnect The Exclave"
-POR_reconnect_the_exclave_desc:0 "The most northern part of Angola, Cabinda is strategically vulnerable. Its blocked from us by the Belgian Congo, an artificial mess built on cruelty and mismanagement. Moreover, the Kingdom of Kongo, our own vassal, was partly absorbed into the Congo Free State. Its time we end this farce"
+POR_reconnect_the_exclave_desc:0 "The most northern part of Angola, Cabinda is strategically vulnerable. Its blocked from us by the Belgian Congo, an artificial mess built on cruelty and mismanagement. Moreover, the Kingdom of Kongo, our own vassal, was partly absorbed into the Congo Free State. Its time we end this farce."
 POR_mappa_d'africa_ambitions:0 "Mappa D'Africa Ambitions"
 POR_mappa_d'africa_ambitions_desc:0 
 
@@ -10886,7 +10886,7 @@ POR_luso_hispanic_pact_desc:0
 POR_gramido_liberty_accords:0 "Gramido Liberty Accords"
 POR_gramido_liberty_accords_desc:0
 POR_host_el_africano:0 "Host El Africano
-POR_host_el_africano_desc:0
+POR_host_el_africano_desc:0 " To celebrate the new ties between our two nations, hosting a state visit by Spains King Alfonso XII To Lisbon."
 POR_against_a_troubled_europe:0 "Against A Troubled Europe"
 POR_against_a_troubled_europe_desc:0 
 POR_promote_a_liberal_association:0 "Promote a Liberal Association"
@@ -10904,7 +10904,7 @@ POR_constitucao_de_amplo_comunidade_hispanica_desc:0
 POR_our_fair_share:0 "Our Fair Share"
 POR_our_fair_share_desc:0
 POR_military_envoy_to_germany:0 "Military Envoy to Germany"
-POR_military_envoy_to_germany_desc:0 "with the current state of our armed forces, it would be prudent to send some officers to the elite Prussian Staff College in Berlin, to learn from Europe's most powerful army.
+POR_military_envoy_to_germany_desc:0 "With the current state of our armed forces, it would be prudent to send some officers to the elite Prussian Staff College in Berlin, to learn from Europe's most powerful army."
 POR_interfaith_harmony_pact:0 "Interfaith Harmony Pact"
 POR_interfaith_harmony_pact_desc:0
 POR_the_moniz_scheme:0 "The Moniz Scheme"
