focus event chain+loc
event chain for socialists government or whatever
yw

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14890,3 +14890,15 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
  ww1_libya.1.t:0 "Ahmed Sharif Abdicates"
  ww1_libya.1.d:0 "Weakened by his defeat, Ahmed Sharif as-Senussi concedes the leadership of the Senussi order to his young cousin Mohammed Idris, who is open to the negotiations with the imperialists."
  ww1_libya.1.a:0 "Inshallah."
+
+
+ # ROMANIA HERE BUT LEAF PUT MOST OF THE ROMANIAN EVENTS IN FOCUS LOC
+ ww1_romania.62.t:0 "Socialists Organize"
+ ww1_romania.62.desc:0 "this is an event description"
+ ww1_romania.62.a:0 "This is a disaster!"
+ ww1_romania.63.t:0 "Mass Riots in the Streets"
+ ww1_romania.63.a:0 "What is happening!"
+ ww1_romania.63.desc:0 "Socialists took to the streets of our cities tonight. more event description. lore!"
+ ww1_romania.64.t:0 "[ROM.GetLeader] forced to resign!"
+ ww1_romania.64.desc:0 "event description yipee"
+ ww1_romania.64.a:0 "Out the window."
