--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5553,6 +5553,12 @@ ROM_restructure_our_logistics:0 "Improve Supply Logistics"
 ROM_restructure_our_logistics_desc:0 "With Romania’s needs of armed forces expanding, it has become evident that our current logistics network is insufficient. By modernizing our supply routes and infrastructure, we can ensure that vital resources reach the front lines more efficiently, strengthening our strategic capabilities and preparing our nation for future challenges."
 ROM_slow_and_steady_wins_the_race:0 "Slow and Steady Wins the Race"
 ROM_social_welfare:0 "Social Welfare"
+ROM_new_times:0 "New Times"
+ROM_the_lame_duck:0 "The Lame Duck"
+ROM_restore_romanian_pride:0 "Restore Romanian Pride"
+ROM_reunify_the_conservatives:0 "Reunify the Conservatives"
+ROM_torch_to_the_future:0 "A Torch to the Future"
+ROM_socialist_crackdown:0 "Socialist Crackdown"
 
 
 #custom tooltips
