--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5559,6 +5559,7 @@ ROM_restore_romanian_pride:0 "Restore Romanian Pride"
 ROM_reunify_the_conservatives:0 "Reunify the Conservatives"
 ROM_torch_to_the_future:0 "A Torch to the Future"
 ROM_socialist_crackdown:0 "Socialist Crackdown"
+ROM_preventing_a_brain_drain:0 "Prevent A Brain Drain"
 
 
 #custom tooltips
