leaf if u want to erase this do it

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5560,6 +5560,7 @@ ROM_reunify_the_conservatives:0 "Reunify the Conservatives"
 ROM_torch_to_the_future:0 "A Torch to the Future"
 ROM_socialist_crackdown:0 "Socialist Crackdown"
 ROM_preventing_a_brain_drain:0 "Prevent A Brain Drain"
+ROM_build_up_more_defenses:0 "Buildup More Defenses"
 
 
 #custom tooltips
