--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9881,6 +9881,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_portugal_news.1.d_republic: "Mirroring their former colony, Brazil, the Republicans of Portugal have couped the monarchy. A string of blunders by the Monarchy, mostly concerning the colonies and technological development, provoked a very small band of rebels to come together, which quickly earned the support of nearly the entire military.\n\nThough the issues the Monarchy faced are unlikely to be easily solved any time soon, at least the anger of the public is quenched, for now."
  ww1_portugal_news.1.d_kingdom: "In Portugal, there was an attempt coup. Republican leaders announced the start of a revolution that began with mass demonstrations. The army was divided, some of the generals sided with the Republican Party, but monarchist forces resisted.\n\nKing Manuel II refused to abdicate and called on loyal subjects to resist the republican rebellion. The Portuguese Civil War began."
  ww1_portugal_news.1.a: "Monarchs be careful."
+ ww1_portugal_news.1.b: "We should be careful."
  ww1_portugal_news.2.t: "[GetMonth] [GetYear] coup d'état in Portugal"
  ww1_portugal_news.2.b: "What will become of the young republic?"
  ww1_portugal_news.3.t: "Revolução Nacional"
