--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5557,7 +5557,7 @@ ROM_new_times:0 "New Times"
 ROM_the_lame_duck:0 "The Lame Duck"
 ROM_restore_romanian_pride:0 "Restore Romanian Pride"
 ROM_reunify_the_conservatives:0 "Reunify the Conservatives"
-ROM_torch_to_the_future:0 "A Torch to the Future"
+ROM_torch_to_the_future:0 "Romanian Liberalism"
 ROM_socialist_crackdown:0 "Socialist Crackdown"
 ROM_preventing_a_brain_drain:0 "Prevent A Brain Drain"
 ROM_build_up_more_defenses:0 "Buildup More Defenses"
