--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9330,6 +9330,7 @@ ROM_barbu_delavrancea:0 "Barbu Delavrancea"
 ROM_constantin_arion:0 "Constantin Arion"
 ROM_constantin_motru:0 "Constantin Montru"
 sociologist:0 "Sociologist"
+ROM_unfinished_land_reform_bad:0 "Unfinished Land Reform"
 ROM_constantin_stere:0 "Constantin Stere"
 ROM_second_world_flight:0 "Second Flight in the World"
  ROM_titu_maiorescu:0 "Titu Maiorescu"
