--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1849,9 +1849,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  bdz:0 "BDZ"
  sofia_artillery_arsenal:0 "Sofia Artillery Arsenal"
  BUL_idea_national_assembly:0 "National Assembly"
- BUL_idea_national_assembly_desc:0 "The Bulgarian State will be governed independently in accordance with a Constitution elaborated by a legislature elected by the people."
+ BUL_idea_national_assembly_desc:0 "Ever since the establishment of the preliminary Constituent National Assembly and especially after the ratification of the Tarnovo constitution, Bulgaria has had an uninterrupted rule partially by Parliament. Nominally, this system has made Bulgaria one of the most democratic nations in Eastern Europe, however, in practice, the National Assembly is largely incapable of agreement or even performing its basic constitutional functions, only mounting opposition significant opposition against the monarch of the state."
  BUL_idea_national_assembly_2:0 "National Assembly"
- BUL_idea_national_assembly_2_desc:0 "The Bulgarian State will be governed independently in accordance with a Constitution elaborated by a legislature elected by the people."
+ BUL_idea_national_assembly_2_desc:0 "Ever since the establishment of the preliminary Constituent National Assembly and especially after the ratification of the Tarnovo constitution, Bulgaria has had an uninterrupted rule partially by Parliament. Nominally, this system has made Bulgaria one of the most democratic nations in Eastern Europe, however, in practice, the National Assembly is largely incapable of agreement or even performing its basic constitutional functions, only mounting opposition significant opposition against the monarch of the state."
  BUL_idea_lozengradska_operacija:0 "Lozengradska Operacija"
  BUL_idea_first_national_catastrophe:0 "First National Catastrophe"
  BUL_idea_first_national_catastrophe_2:0 "First National Catastrophe"
@@ -1893,7 +1893,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  BUL_tobacco_surplus:0 "Tobacco Sales"
  BUL_turkish_opposition:0 "Turkish Opposition"
  BUL_ruse_blood_wedding_ordeal_desc:0 "On February 24, 1910, Yordan Stefanov and Saafet received permission to marry from a doctor, as Saafet was deemed “mentally healthy” and claimed to be 18 years old. Saafet chose to adopt a Slavic name, Ruska. The next day, her father, a hodzha, protested to the mayor along with other Muslims. They claimed their daughter had been abducted and was still underage (almost 16 years old) for marriage. On February 27, 1910, the court revoked the marriage permission and ordered Saafet to return to her parents. She went back to their house until the evening. That night, a crowd of “adventurers” gathered outside Saafet’s house intending to “rescue” her. The authorities moved her to a police station but couldn’t manage the approximately 1000 people, and Saafet eventually married Yordan on the 28th. Their wedding was celebrated by many in the central square, as it was the first Sunday before Lent, and a traditional fancy-dress carnival was held. The local police officer, who also attended the carnival, was mocked for failing to keep Saafet in the police station. Half an hour later, he called for cavalry support, and after some mutual verbal insults, a fight broke out between the citizens and the military. The clashes resulted in 24 deaths and about 70 injuries. Initially, the police tried to cover up the story by restricting communications to and from Ruse, but it soon became top news in newspapers across the country."
-
+ 
   
  #AUSTRALIA - NS - Gov
  AST_idea_Citizen_Army:0 "Citizen Military Forces"
