--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5105,11 +5105,21 @@
  TUR_governor_of_aleppo:0 "Governor of Aleppo"
  TUR_governor_of_aleppo_desc:0 "Our appointment has brough a new era for the governance of Syria. Under our leadership, there won't be no disloyal rulers left in Syria. As Aleppo stands in between Syria and Anatolia, we have to place a loyal follower of Cemâl in command."
  TUR_governor_of_aleppo_tt:0 "An §Yevent chain§! will start for us to decide whether we'll change the §YGovernor of Aleppo§!, or keep §YBekir Sami Bey§! in his post."
- TUR_bring_halide_edib_adivar_tt1:0 "Modify §YCemâl's Syria§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
- TUR_bring_halide_edib_adivar_tt2:0 "§YHalide Edib Hanım§!(@TUR) joins §Y[FROM.GetNameDef]§!\n"
+ TUR_bring_halide_edib_hanim:0 "Bring Halide Edib Hanım"
+ TUR_bring_halide_edib_hanim_desc:0 "Halide Edib Hanım is a well respected women's rights and education advocate. He's also a close associate of Cemâl Paşa. To improve the women's education in Syria, and potentially assimilate them, we will invite her to our governate."
+ TUR_bring_halide_edib_hanim_tt1:0 "Modify §YCemâl's Syria§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
+ TUR_bring_halide_edib_hanim_tt2:0 "§YHalide Edib Hanım§!(@TUR) joins §Y[FROM.GetNameDef]§!\n"
+ TUR_war_taxes:0 "War Taxes"
+ TUR_war_taxes_desc:0 "As war is dragging close, we'll need additional resources to put into our military expenses. While it will burden our population a lot, only possible way seems to be taxing our people."
  TUR_war_taxes_tt:0 "Modify §YCemâl's Syria§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-20%§!\n£stability_texticon  Weekly Stability: §R-1.00%§!\n\n"
  TUR_war_taxes_tt2:0 "Modify §YCemâl's Syria§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y20%§!\n£stability_texticon  Weekly Stability: §G+1.00%§!\n\n"
+ TUR_enforce_turkish_in_administration:0 "Enforce Turkish in Administration"
+ TUR_enforce_turkish_in_administration_desc:0 "As we're trying to centralize our state, all units of governance needs to be able to perfectly understand each other. Since the characteristics of our empire lies in its Muslim Turkish roots, we will officially enforce Turkish as the sole language to be spoken in administration."
  TUR_enforce_turkish_in_administration_tt:0 "Modify §YCemâl's Syria§! by\n£political_power_texticon  Political Power Gain: §G+10%§!\n£stability_texticon  Stability: §R-5.00%§!\n\n"
+ TUR_syrian_education_campaign:0 "Syrian Education Campaign"
+ TUR_syrian_education_campaign_desc:0 "Just like the rest of the empire, Syria lacks in education. These abysmal literacy rates will do nothing but to drag down our empire's scientific and technical capabilities. To reach the level of our contemporary counterparts, a reform in education is a must."
+ TUR_forced_labor:0 "Forced Labor"
+ TUR_forced_labor_desc:0 "The current resources of the provinces under our control is not enough for various projects we plan on undertaking. While controversial as it sounds, we very well utilize forced labor in our projects, to boost our construction and production capabilities."
  TUR_forced_labor_tt:0 "Modify §YCemâl's Syria§! by\n£stability_texticon  Stability: §R-10.00%§!\n£war_support_modifiericons_texticon  War Support: §R-10.00%§!\n£construction_speed_texticon  Construction Speed: §G+10.00%§!\n£factory_output_texticon  Factory Output: §G+10.00%§!\n\nUnlocks £decision_icon_small  §YForced Labor§! Decisions. These §Ydecisions§! will modify or abolish §Yforced labor§!."
  TUR_forced_labor_infrastructure_tt:0 "Modify §YCemâl's Syria§! by\n£stability_texticon  Stability: §R-5.00%§!\n£war_support_modifiericons_texticon  War Support: §R-5.00%§!\n£construction_speed_texticon  Construction Speed: §R-5.00%§!\n£construction_speed_infrastructure_texticon  §YInfrastructure§! construction speed: §G+5.00%§!\n£construction_speed_railway_texticon  §YRailway§! construction speed: §G+10.00%§!\n\n"
  TUR_forced_labor_civilian_tt:0 "Modify §YCemâl's Syria§! by\n£stability_texticon  Stability: §R-5.00%§!\n£war_support_modifiericons_texticon  War Support: §R-5.00%§!\n£construction_speed_texticon  Construction Speed: §R-5.00%§!\n£construction_speed_civfactory_texticon  §YCivilian Factory§! construction speed: §G+10.00%§!\n\n"
@@ -5118,7 +5128,13 @@
  TUR_forced_labor_infrastructure_tt2:0 "Modify §YCemâl's Syria§! by\n£stability_texticon  Stability: §G+15.00%§!\n£war_support_modifiericons_texticon  War Support: §G+15.00%§!\n£construction_speed_texticon  Construction Speed: §R-5.00%§!\n£factory_output_texticon  Factory Output: §R-10.00%§!\n£construction_speed_infrastructure_texticon  §YInfrastructure§! construction speed: §R-5.00%§!\n£construction_speed_railway_texticon  §YRailway§! construction speed: §R-10.00%§!\n\n"
  TUR_forced_labor_civilian_tt2:0 "Modify §YCemâl's Syria§! by\n£stability_texticon  Stability: §G+15.00%§!\n£war_support_modifiericons_texticon  War Support: §G+15.00%§!\n£construction_speed_texticon  Construction Speed: §R-5.00%§!\n£factory_output_texticon  Factory Output: §R-10.00%§!\n£construction_speed_civfactory_texticon  §YCivilian Factory§! construction speed: §R-10.00%§!\n\n"
  TUR_forced_labor_military_tt2:0 "Modify §YCemâl's Syria§! by\n£stability_texticon  Stability: §G+15.00%§!\n£war_support_modifiericons_texticon  War Support: §G+15.00%§!\n£construction_speed_texticon  Construction Speed: §R-5.00%§!\n£factory_output_texticon  Factory Output: §R-10.00%§!\n£construction_speed_milfactory_texticon  §YMilitary Factory§! construction speed: §R-10.00%§!\n\n"
+ TUR_open_up_syrian_factories:0 "Open up Syrian Factories"
+ TUR_open_up_syrian_factories_desc:0 "Far away from the capital and other industrialized parts of our empire, Syria stands as a desert in terms of development. Under our initiatives, we'll set on to open first factories in Syria."
+ TUR_syrian_industrialization:0 "Syrian Industrialization"
+ TUR_syrian_industrialization_desc:0 "Opening a few factories won't let us industrialize and catch up to the western capabilities. To properly industrialize, we'll have to take on large industrialization projects, at a high cost."
  TUR_syrian_industrialization_tt:0 "This decision will add §G1§! §YCivilian Factory§! after a time span of §Y720 days§!.\nThis time could be §Yreduced§! with several §Ydecisions§!."
+ TUR_workshops_for_weapons:0 "Workshops for Weapons"
+ TUR_workshops_for_weapons_desc:0 "It is true that we don't have enough factories to produce our weapons, and we rely on the central government for materials. Yet we should we able to be self sufficient in case our steady supply of weapons from the capital are interrupted."
  TUR_syrian_reforms:0 "Syrian Reforms"
  TUR_syrian_reforms_desc:0 "The main objective of Cemâl Paşa in the Syrian provinces is to reform and centralize these lands. As Cemâl Paşa will follow the path of centralization and integration of Syrian people and lands to the empire that was kickstarted with Tanzimat reforms, Syria will become an integral part of the empire."
  TUR_dealing_with_the_arabist_movement:0 "Dealing with the Arabist Movement"
