--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -444,9 +444,9 @@
  home_defense_focus_desc:0 "We will turn our country into a gigantic fortress that only a madman wants to attack."
 
  # Feudal Tree
- FEU_def_country_name:0 "[FROM.GetNameDefCap]"
+ FEU_def_country_name:0 "[ROOT.GetNameDefCap]"
  FEU_secure_internal_politics:0 "Secure Internal Politics"
- FEU_strengthen_ruler_position:0 "Strengthen [FROM.GetLeader]'s Position"
+ FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Position"
  FEU_enact_minor_reforms:0 "Enact Minor Reforms"
  FEU_the_status_of_the_minorities:0 "The Status of the Minorities"
  FEU_protect_the_rights_of_man:0 "Protect the Rights of Man"
@@ -457,7 +457,7 @@
  FEU_westernisation_desc:0 "Although our people may not agree with our policies, we know that the way forward for our nation is through reforms and social progress."
  FEU_draft_a_constitution:0 "Draft a Constitution"
  FEU_our_place_in_the_world:0 "Our Place in the World"
- FEU_our_place_in_the_world_desc:0 "The [DAR.GetAdjectiveCap] people have a complex history with deep-rooted traditions. It is imperative for a great nation like ours to assert its position in the world."
+ FEU_our_place_in_the_world_desc:0 "The [ROOT.GetAdjectiveCap] people have a complex history with deep-rooted traditions. It is imperative for a great nation like ours to assert its position in the world."
  FEU_secure_our_independence:0 "Secure our Independence"
  FEU_secure_our_independence_desc:0 "As a minor nation, our independence is often challenged by foreign powers for their own interests. Only through sustained diplomatic efforts will we be able to secure our nation's future."
  FEU_secure_entente_support:0 "Secure Entente Support"
@@ -480,8 +480,14 @@ FEU_every_man_a_warrior:0 "Every Man a Warrior"
 FEU_reform_the_conscription:0 "Extend the Conscription System"
 FEU_names_finest:0 "[ROOT.GetAdjective] Cavalry"
 FEU_utilize_our_strengths:0 "Use Everything We Have"
+FEU_fortify_capital:0 "Fortify [ROOT.Capital.GetCapitalVictoryPointName]"
 
 FEU_develop_capitalstate:0 "Develop [ROOT.capital.GetName]"
+FEU_pave_the_roads:0 "Pave the Roads"
+FEU_the_adjective_regional_development_fund:0 "The [ROOT.GetAdjective] Development Fund"
+FEU_efficent_farming:0 "Efficent Farming Techniques"
+FEU_state-funded_projects:0 "Urbanisation of [ROOT.Capital.GetCapitalVictoryPointName]"
+FEU_improved_irrigation_systems:0 "Improved Irrigation Systems"
 
  ##########
 
