Let me commit every 2 seconds, Sussy

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8748,6 +8748,23 @@ ww1_bulgaria.70.t: "Greek Opposition"
 ww1_bulgaria.70.d: "The newly acquired territories that once belonged to Greece are proving troublesome. Greek nationals in these areas remain loyal to their homeland, refusing to fully integrate into Bulgaria. Their defiance might need to be quashed, or should we wait and hope their resistance will wane?"
 ww1_bulgaria.70.a: "They'll Submit in Due Time"
 
+ww1_bulgaria.71.t: "Ruse Blood Wedding Controversy"
+ww1_bulgaria.71.d: "A scandal has emerged surrounding a recent wedding in Ruse, where several members of the local nobility were involved in an incident that quickly turned violent. The story has spread rapidly, causing an uproar. There is pressure from various sides to censor the event, but others argue it should be left alone. How will the government respond?"
+ww1_bulgaria.71.a: "Censor It"
+ww1_bulgaria.71.b: "Leave it Alone"
+
+ww1_bulgaria.72.t: "The Censorship Proves Mediocre"
+ww1_bulgaria.72.d: "Despite the efforts to censor the incident, the story has spread in fragmented and distorted forms. The public remains somewhat aware, but their understanding is muddled by confusion and rumors."
+ww1_bulgaria.72.a: "Stupid People with Their Thoughts"
+
+ww1_bulgaria.73.t: "The Censorship Backfires"
+ww1_bulgaria.73.d: "The censorship attempt has only made things worse. The public sees the government's heavy-handed approach as an admission of guilt or fear, and unrest has grown, with calls for greater transparency."
+ww1_bulgaria.73.a: "Stupid People with Their Thoughts"
+
+ww1_bulgaria.74.t: "The Censorship Works"
+ww1_bulgaria.74.d: "The censorship has been effective. The story has been suppressed, and the public's attention has moved on to other matters. The government appears to have successfully defused the situation."
+ww1_bulgaria.74.a: "Good"
+
 
  # ENGLAND
  ww1_england.1.t: "Sinking of the Titanic"
