--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -44,9 +44,10 @@
  USA_DEF:0 "America"
  USA_ADJ:0 "American"
  SWE_fascism:0 "Sweden"
- SWE_fascism_DEF:0 "Sweden"
+ SWE_fascism_DEF:0 "the Kingdom of Sweden"
  SWE_neutrality:0 "Kingdom of Sweden"
  SWE_neutrality_DEF:0 "the Kingdom of Sweden"
+ SWE_democratic_DEF:0 "the Kingdom of Sweden"
  SWE_communism:0 "Worker's Commune of Sweden"
  SWE_communism_DEF:0 "the Worker's Commune of Sweden"
  SWE:0 "Sweden"
@@ -82,6 +83,7 @@
  BEL_ADJ:0 "Belgian"
  HOL_fascism:0 "Calvinist Netherlands"
  HOL_fascism_DEF:0 "Calvinist Netherlands"
+ HOL_democratic_DEF:0 "the Kingdom of the Netherlands"
  HOL_neutrality:0 "Kingdom of the Netherlands"
  HOL_neutrality_DEF:0 "the Kingdom of the Netherlands"
  HOL_communism:0 "Commune of United Provinces"
@@ -165,6 +167,7 @@
  ITA_ADJ:0 "Italian"
  ROM_fascism:0 "Radical Romania"
  ROM_fascism_DEF:0 "Radical Romania"
+ ROM_democratic_DEF:0 "the Kingdom of Romania"
  ROM_neutrality:0 "Kingdom of Romania"
  ROM_neutrality_DEF:0 "the Kingdom of Romania"
  ROM_communism:0 "Romanian Socialist Republic"
@@ -213,6 +216,7 @@
  ALB_ADJ:0 "Albanian"
  NOR_fascism:0 "Norgesveldet"
  NOR_fascism_DEF:0 "Norgesveldet"
+ NOR_democratic_DEF:0 "the Kingdom of Norway"
  NOR_neutrality:0 "Kingdom of Norway"
  NOR_neutrality_DEF:0 "the Kingdom of Norway"
  NOR_communism:0 "Socialist State of Norway"
@@ -222,6 +226,7 @@
  NOR_ADJ:0 "Norwegian"
  DEN_fascism:0 "North Sea Empire"
  DEN_fascism_DEF:0 "the North Sea Empire"
+ DEN_democratic_DEF:0 "the Kingdom of Denmark"
  DEN_neutrality:0 "Kingdom of Denmark"
  DEN_neutrality_DEF:0 "the Kingdom of Denmark"
  DEN_communism:0 "Danish Council Republic"
@@ -284,6 +289,7 @@
  AFG_fascism_DEF:0 "the Emirate of Afghanistan"
  AFG_democratic:0 "Republic of Afghanistan"
  AFG_democratic_DEF:0 "the Republic of Afghanistan"
+ AFG_neutrality_DEF:0 "the Emirate of Afghanistan"
  AFG_communism:0 "Socialist Republic of Afghanistan"
  AFG_communism_DEF:0 "the Socialist Republic of Afghanistan"
  AFG:0 "Afghanistan"
@@ -293,6 +299,7 @@
  ARG_fascism_DEF:0 "the Argentine League"
  ARG_democratic:0 "Argentine Republic"
  ARG_democratic_DEF:0 "the Argentine Republic"
+ ARG_neutrality_DEF:0 "the Argentine Republic"
  ARG_communism:0 "Socialist Argentine Republic"
  ARG_communism_DEF:0 "the Socialist Argentine Republic"
  ARG:0 "Argentina"
@@ -302,6 +309,7 @@
  BOL_fascism_DEF:0 "the Republic of Bolivia"
  BOL_democratic:0 "Republic of Bolivia"
  BOL_democratic_DEF:0 "the Republic of Bolivia"
+ BOL_neutrality_DEF:0 "the Republic of Bolivia"
  BOL_communism:0 "Bolivia Izquerdista"
  BOL_communism_DEF:0 "Bolivia Izquerdista"
  BOL:0 "Bolivia"
@@ -309,6 +317,7 @@
  BOL_ADJ:0 "Bolivian"
  BRA_fascism:0 "Florianist Brazil"
  BRA_fascism_DEF:0 "Florianist Brazil"
+ BRA_democratic_DEF:0 "the Republic of the United States of Brazil"
  BRA_neutrality:0 "Empire of Brazil"
  BRA_neutrality_DEF:0 "the Empire of Brazil"
  BRA_communism:0 "United Communes of Brazil"
@@ -385,6 +394,8 @@
  PRC_ADJ:0 "Chinese"
  CHL_fascism:0 "Chilean State"
  CHL_fascism_DEF:0 "the Chilean State"
+ CHL_democratic:0 "Republic of Chile"
+ CHL_democratic_DEF:0 "the Republic of Chile"
  CHL_neutrality:0 "Republic of Chile"
  CHL_neutrality_DEF:0 "the Republic of Chile"
  CHL_communism:0 "Socialist Republic of Chile"
@@ -400,6 +411,8 @@
  COL:0 "Colombia"
  COL_DEF:0 "Colombia"
  COL_ADJ:0 "Colombian"
+ COS_democratic_DEF:0 "the Republic of Costa Rica"
+ COS_neutrality_DEF:0 "the Republic of Costa Rica"
  COS_communism:0 "Costa del Pueblo"
  COS_communism_DEF:0 "Costa del Pueblo"
  COS:0 "Costa Rica"
@@ -407,6 +420,8 @@
  COS_ADJ:0 "Costa Rican"
  ECU_fascism:0 "Nationalist Ecuador"
  ECU_fascism_DEF:0 "Nationalist Ecuador"
+ ECU_democratic_DEF:0 "the Republic of Ecuador"
+ ECU_neutrality_DEF:0 "the Republic of Ecuador"
  ECU_communism:0 "Socialist Republic of Ecuador"
  ECU_communism_DEF:0 "the Socialist Republic of Ecuador"
  ECU:0 "Ecuador"
@@ -414,6 +429,7 @@
  ECU_ADJ:0 "Ecuadorian"
  ELS_democratic:0 "Republic of El Salvador"
  ELS_democratic_DEF:0 "the Republic of El Salvador"
+ ELS_neutrality_DEF:0 "the Republic of El Salvador"
  ELS_communism:0 "Salvadorian Commune"
  ELS_communism_DEF:0 "the Salvadorian Commune"
  ELS:0 "El Salvador"
@@ -423,6 +439,7 @@
  GUA_fascism_DEF:0 "the Guatemalan Corporate State"
  GUA_democratic:0 "Republic of Guatemala"
  GUA_democratic_DEF:0 "the Republic of Guatemala"
+ GUA_neutrality_DEF:0 "the Republic of Guatemala"
  GUA_communism:0 "Union of Guatemala"
  GUA_communism_DEF:0 "the Union of Guatemala"
  GUA:0 "Guatemala"
@@ -430,10 +447,8 @@
  GUA_ADJ:0 "Guatemalan"
  HON_fascism:0 "Corporatist Honduras"
  HON_fascism_DEF:0 "Corporatist Honduras"
- HON_democratic:0 "Honduras"
- HON_democratic_DEF:0 "Honduras"
- HON_neutrality:0 "Honduras"
- HON_neutrality_DEF:0 "Honduras"
+ HON_democratic_DEF:0 "the Republic of Honduras"
+ HON_neutrality_DEF:0 "the Republic of Honduras"
  HON_communism:0 "Commune of Honduras"
  HON_communism_DEF:0 "the Commune of Honduras"
  HON:0 "Honduras"
@@ -482,6 +497,7 @@
  NEP_fascism_DEF:0 "the Himalayan Empire"
  NEP_democratic:0 "Federal Republic of Nepal"
  NEP_democratic_DEF:0 "the Federal Republic of Nepal"
+ NEP_neutrality_DEF:0 "the Kingdom of Nepal"
  NEP_communism:0 "Communist State of Nepal"
  NEP_communism_DEF:0 "the Communist State of Nepal"
  NEP:0 "Nepal"
@@ -489,6 +505,8 @@
  NEP_ADJ:0 "Nepali"
  NIC_fascism:0 "Nationalist Nicaragua"
  NIC_fascism_DEF:0 "Nationalist Nicaragua"
+ NIC_democratic_DEF:0 "the Republic of Nicaragua"
+ NIC_neutrality_DEF:0 "the Republic of Nicaragua"
  NIC_communism:0 "International Nicaragua"
  NIC_communism_DEF:0 "International Nicaragua"
  NIC:0 "Nicaragua"
@@ -496,6 +514,8 @@
  NIC_ADJ:0 "Nicaraguan"
  PAN_fascism:0 "Patriotic Communal Panama"
  PAN_fascism_DEF:0 "Patriotic Communal Panama"
+ PAN_democratic_DEF:0 "the Republic of Panama"
+ PAN_neutrality_DEF:0 "the Republic of Panama"
  PAN_communism:0 "People's Republic of Panama"
  PAN_communism_DEF:0 "the People's Republic of Panama"
  PAN:0 "Panama"
@@ -503,6 +523,9 @@
  PAN_ADJ:0 "Panamanian"
  PAR_fascism:0 "Nationalist Paraguay"
  PAR_fascism_DEF:0 "Nationalist Paraguay"
+ PAR_democratic_DEF:0 "the Republic of Paraguay"
+ PAR_neutrality_DEF:0 "the Republic of Paraguay"
+ PAR_communism_DEF:0 "the Republic of Paraguay"
  PAR:0 "Paraguay"
  PAR_DEF:0 "Paraguay"
  PAR_ADJ:0 "Paraguayan"
@@ -526,6 +549,7 @@
  PHI_ADJ:0 "Philippine"
  PRU_democratic:0 "Republic of Peru"
  PRU_democratic_DEF:0 "the Republic of Peru"
+ PRU_neutrality_DEF:0 "the Republic of Peru"
  PRU_communism:0 "Revolutionary Peru"
  PRU_communism_DEF:0 "Revolutionary Peru"
  PRU:0 "Peru"
@@ -595,6 +619,11 @@
  TIB:0 "Tibet"
  TIB_DEF:0 "Tibet"
  TIB_ADJ:0 "Tibetan"
+ VEN_democratic:0 "United States of Venezuela"
+ VEN_democratic_DEF:0 "the United States of Venezuela"
+ VEN_neutrality_DEF:0 "the United States of Venezuela"
+ VEN_communism:0 "Republic of Venezuela"
+ VEN_communism_DEF:0 "the Republic of Venezuela"
  VEN:0 "Venezuela"
  VEN_DEF:0 "Venezuela"
  VEN_ADJ:0 "Venezuelan"
@@ -607,6 +636,8 @@
  YUN:0 "Yunnan"
  YUN_DEF:0 "Yunnan"
  YUN_ADJ:0 "Yunnanese"
+ AST_democratic:0 "Commonwealth of Australia"
+ AST_democratic_DEF:0 "the Commonwealth of Australia"
  AST_neutrality:0 "Cavalier Australia"
  AST_neutrality_DEF:0 "the Australian Royalists"
  AST_communism:0 "Australian Union"
@@ -616,24 +647,26 @@
  AST_ADJ:0 "Australian"
  NZL_fascism:0 "Kiwi Empire"
  NZL_fascism_DEF:0 "the Kiwi Empire"
- NZL_neutrality:0 "Nova Zeelandia Republic"
- NZL_neutrality_DEF:0 "the Nova Zeelandia Republic"
- NZL_communism:0 "People's Republic of Aotearoa"
+ NZL_communism:0 "Aotearoa"
  NZL_communism_DEF:0 "the People's Republic of Aotearoa"
  NZL:0 "New Zealand"
  NZL_DEF:0 "New Zealand"
  NZL_ADJ:0 "New Zealand"
  URG_fascism:0 "Nationalist Uruguay"
  URG_fascism_DEF:0 "Nationalist Uruguay"
- URG_communism:0 "People's Republic Uruguay"
- URG_communism_DEF:0 "the People's Republic Uruguay"
+ URG_democratic_DEF:0 "the Oriental Republic of Uruguay"
+ URG_neutrality_DEF:0 "the Oriental Republic of Uruguay"
+ URG_communism:0 "People's Republic of Uruguay"
+ URG_communism_DEF:0 "the People's Republic of Uruguay"
  URG:0 "Uruguay"
  URG_DEF:0 "Uruguay"
  URG_ADJ:0 "Uruguayan"
  CUB_fascism:0 "Nationalist Cuba"
  CUB_fascism_DEF:0 "Nationalist Cuba"
- CUB_communism:0 "Revolutionary Cuba"
- CUB_communism_DEF:0 "Revolutionary Cuba"
+ CUB_democratic_DEF:0 "the Republic of Cuba"
+ CUB_neutrality_DEF:0 "the Republic of Cuba"
+ CUB_communism:0 "Republic of Cuba"
+ CUB_communism_DEF:0 "the Republic of Cuba"
  CUB:0 "Cuba"
  CUB_DEF:0 "Cuba"
  CUB_ADJ:0 "Cuban"
@@ -644,6 +677,8 @@
  DOM_ADJ:0 "Dominican"
  HAI_fascism:0 "Third Empire of Haiti"
  HAI_fascism_DEF:0 "the Third Empire of Haiti"
+ HAI_democratic_DEF:0 "the Republic of Haiti"
+ HAI_neutrality_DEF:0 "the Republic of Haiti"
  HAI_communism:0 "Haiti Socialist Republic"
  HAI_communism_DEF:0 "the Haiti Socialist Republic"
  HAI:0 "Haiti"
@@ -686,6 +721,7 @@
  ETH_fascism_DEF:0 "the Ethiopian Empire"
  ETH_democratic:0 "Republic of Ethiopia"
  ETH_democratic_DEF:0 "the Republic of Ethiopia"
+ ETH_neutrality_DEF:0 "the Ethiopian Empire"
  ETH_communism:0 "People's Republic of Ethiopia"
  ETH_communism_DEF:0 "the People's Republic of Ethiopia"
  ETH:0 "Ethiopia"
@@ -704,6 +740,7 @@
  BHU_fascism_DEF:0 "the Thunder Dragon Empire"
  BHU_democratic:0 "Bhutanese Republic"
  BHU_democratic_DEF:0 "the Bhutanese Republic"
+ BHU_neutrality_DEF:0 "the Kingdom of Bhutan"
  BHU_communism:0 "Union of Red Dragons"
  BHU_communism_DEF:0 "the Union of Red Dragons"
  BHU:0 "Bhutan"
