--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -796,7 +796,7 @@
  STATE_795: "Vaupés"
  STATE_796: "Gangwon"
  STATE_797: "Hwanghae"
- STATE_798: "Samoa"
+ STATE_798: "German Samoa"
  STATE_799: "Pyeongan"
  STATE_800: "Gyeonggi"
  STATE_801: "Chungcheong"
