--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1902,7 +1902,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  MAC_idea_agrarian_economy:0 "Agrarian Economy"
  MAC_idea_agrarian_economy_desc:0 "Due to our unfortunate oppression by the Ottomans we've been unable to indsutrialize as such other nations have, and will have to continue to rely on our farms to fuel our young economy"
  MAC_idea_struggling_identity:0 "Struggling Identity"
- MAC_idea_struggling_identity_desc:0 "Not everyone agrees on what a "Macedonian" is. Are we Bulgarian, Greek, Serb, none, or all? Not to mention the ethnic tensions... our future looks complex."
+ MAC_idea_struggling_identity_desc:0 "Not everyone agrees on what a 'Macedonian' is. Are we Bulgarian, Greek, Serb, none, or all? Not to mention the ethnic tensions... our future looks complex."
  MAC_idea_military_disarray:0 "Military in Disarray"
  MAC_idea_military_disarray_desc:0 "Our youthful nation has no real military, from they conflicting paramiltaries to the non-existant military industry; we put our trust in foreign military to protect us."
  
