--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5562,6 +5562,7 @@ ROM_socialist_crackdown:0 "Socialist Crackdown"
 ROM_preventing_a_brain_drain:0 "Prevent A Brain Drain"
 ROM_build_up_more_defenses:0 "Buildup More Defenses"
 ROM_concessions_to_the_upper_classes:0 "Concessions to The Upper Classes"
+ROM_on_select_lame_duck:0 "§WUpon selecting this focus:\nGets event '§W§YSocialists Organize!§Y§W'"
 
 
 #custom tooltips
