--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15334,3 +15334,23 @@ ww1_BUL_TUR.51.t: "Asim Bey Criticizes Our Lack of Contentment"
 ww1_BUL_TUR.51.d: "Asim Bey has criticized our administration's dissatisfaction with the status of Autonomous Macedonia. His words cut deep."
 ww1_BUL_TUR.51.a: "Rude"
 ww1_BUL_TUR.51.b: "Cease Negotiations"
+
+ww1_BUL_TUR.52.t: "Border Migration"
+ww1_BUL_TUR.52.d: "With the growing instability in the region, a significant portion of the population is moving from Turkish-controlled territories to the Bulgarian state of Plovdiv. This influx of people could provide more manpower to Bulgaria, though it may also bring with it social and logistical challenges."
+ww1_BUL_TUR.52.a: "Well, welcome to Plovdiv."
+
+ww1_BUL_TUR.53.t: "Border Migration #2: Turkish Exodus"
+ww1_BUL_TUR.53.d: "The chaos near the Bulgarian border has forced Turkish citizens to flee from their homes. The movement of people may affect Turkey’s manpower reserves and complicate efforts to maintain order in the region."
+ww1_BUL_TUR.53.a: "Well, ok."
+
+ww1_BUL_TUR.54.t: "Border Migration"
+ww1_BUL_TUR.54.d: "With the instability at the border showing no signs of slowing down, more people are leaving Turkish territory and heading into Bulgaria. This adds to Bulgaria's manpower pool, but tensions are rising."
+ww1_BUL_TUR.54.a: "We’ll see you guys soon."
+
+ww1_BUL_TUR.55.t: "Border Migration"
+ww1_BUL_TUR.55.d: "Populations in certain Turkish regions are beginning to move in response to the mounting border tensions. This could lead to significant demographic shifts in both Turkey and Bulgaria."
+ww1_BUL_TUR.55.a: "Interesting."
+
+ww1_BUL_TUR.56.t: "Border Migration"
+ww1_BUL_TUR.56.d: "The recent instability has caused a final wave of migration, with thousands of people fleeing towards Sofia. This wave could strengthen Bulgaria’s workforce but also exacerbate tensions along the border."
+ww1_BUL_TUR.56.a: "Welcome to Sofia."
