--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1279,31 +1279,32 @@
  HAI_democratic_party:0 "Pati Liberal"
  HAI_neutrality_party:0 "Pati Nasyonal"
  
- KOR_fascism_party:0 "Military Authorities"
- KOR_fascism_party_long:0 "Military Authorities of the Korean Empire"
- KOR_communism_party:0 "KSP"
- KOR_communism_party_long:0 "Korean Socialist Party"
- KOR_democratic_party:0 "Republicans"
- KOR_neutrality_party:0 "House of Yi"
- KOR_neutrality_party_long:0 "House of Yi"
- KOR_provisional_government:0 "Provisional Government"
- KOR_provisional_government_long:0 "Provisional Government of the Republic of Korea"
+ KOR_fascism_party:0 "KIAF"
+ KOR_fascism_party_long:0 "Daehanjegukgun"
+ KOR_communism_party:0 "Dongnip Hyeophoe\n§R(Disbanded)§!"
+ KOR_democratic_party:0 "Dongnip Hyeophoe\n§R(Disbanded)§!"
+ KOR_independence_club:0 "Dongnip Hyeophoe"
+ KOR_socialist_party:0 "KSP"
+ KOR_socialist_party_long:0 "Hanin Sahoedang"
+ KOR_neutrality_party:0 "Yi Wangga"
+ KOR_provisional_government:0 "Imsijeongbu"
+ KOR_provisional_government_long:0 "Daehanminguk Imsijeongbu"
  KOR_revolutionary_party:0 "NKRP"
- KOR_revolutionary_party_long:0 "New Korea Revolutionary Party"
+ KOR_revolutionary_party_long:0 "Sinhan Hyeongmyeongdang"
  KOR_young_party:0 "NKYP"
- KOR_young_party_long:0 "New Korea Young Party"
+ KOR_young_party_long:0 "Sinhan Cheongnyeondang"
  KOR_national_association:0 "KNA"
- KOR_national_association_long:0 "Korean National Association"
+ KOR_national_association_long:0 "Daehanin Gungminhoe"
  KOR_peoples_party:0 "PPJ"
- KOR_peoples_party_long:0 "People's Party of Joseon"
- KOR_empire_club:0 "Empire Club"
- KOR_governorship_party:0 "Governor-Generalship"
- KOR_governorship_party_long:0 "Governor-Generalship of Korea"
- KOR_governorship_party2:0 "Resident-Generalship"
- KOR_governorship_party2_long:0 "Resident-Generalship of Korea"
- KOR_autonomy_party:0 "National Association"
+ KOR_peoples_party_long:0 "Joseon Inmindang"
+ KOR_empire_club:0 "Hwanggukyeopoe"
+ KOR_governorship_party:0 "Soutokufu"
+ KOR_governorship_party_long:0 "Chōsen Soutokufu"
+ KOR_governorship_party2:0 "Tōkanfu"
+ KOR_governorship_party2_long:0 "Kankoku Tōkanfu"
+ KOR_autonomy_party:0 "Gungmin Hyeopoe"
  KOR_independence_party:0 "KIP"
- KOR_independence_party_long:0 "Korea Independence Party"
+ KOR_independence_party_long:0 "Hanguk Dongnipdang"
  
  ICE_democratic_party:0 "Heimastjórnarflokkurinn"
  ICE_communism_party:0 "Alþýðuflokkurinn"
