--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -9159,6 +9159,21 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  KOR_two_manchu_solution:0 "Two-Manchu Solution"
  KOR_two_manchu_solution_desc:0 "Russia is known for its claims to Manchuria. Now that we are in Manchuria, we can offer them a division of the provinces for mutual interests."
 
+ KOR_1905_treaty:0 "Japan-Korea Protectorate Treaty"
+ KOR_1905_treaty_desc:0 "Japan has defeated the Chinese and the Russians, both of whom are trying to take over Korea, and now Korea is to be placed under the clear supervision of Japan. Let's force them to sign this and establish the Resident-General of Korea, thus making Korea a protectorate."
+ KOR_demilitarisation:0 "Demilitarise Korea"
+ KOR_demilitarisation_desc:0 "The Imperial Korean Army is weak and tiny, but it's their own army. It might resist Japanese attempts at colonisation, so Japan wants to disarm and disband it."
+ KOR_judiciary_takeover:0 "Judiciary Takeover"
+ KOR_judiciary_takeover_desc:0 "The Korean justice system will now be repealed by the Japanese Resident General."
+ KOR_subjugate_south_korea:0 "Punitive Expedition"
+ KOR_subjugate_south_korea_desc:0 "In South Korea, rebels known as the Righteous Armies are resisting the Japanese plan to colonise Korea. The Japanese army systematically wipes them out."
+ KOR_memorandum_of_1910:0 "Gendarmerie Police System"
+ KOR_memorandum_of_1910_desc:0 "For Koreans, batons are medicine; they will come to their senses only when they are beaten. We will establish the police system to expand the gendarmerie in Korea under the Japanese army stationed in Korea."
+ KOR_annex_korea:0 "Annex Korea"
+ KOR_annex_korea_desc:0 "There is no more Korea. The Resident-General will urge the King of Korea to petition Japan for annexation. Korea, or what we'll call Chosen from now on, will be Japan's mainland, but instead of giving the Koreans the full rights of subjects, we'll set up the governorate and rule them as a de facto colony."
+ KOR_establish_government_general:0 "The Government-General"
+ KOR_establish_government_general_desc:0 "The annexation of Korea has been formalised, and we will now officially install the governorate. As a non-constitutional organisation, the Governorate-General of Korea will not be overseen by the Prime Minister or the cabinet, but will be under the direct authority of the Emperor."
+
  #Poland
  POL_cult_of_the_marshal:0 "Cult of the Marshal"
  POL_cult_of_the_marshal_desc:0 ""
