--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5563,7 +5563,11 @@ ROM_preventing_a_brain_drain:0 "Prevent A Brain Drain"
 ROM_build_up_more_defenses:0 "Buildup More Defenses"
 ROM_concessions_to_the_upper_classes:0 "Concessions to The Upper Classes"
 ROM_on_select_lame_duck:0 "§WUpon selecting this focus:\nGets event '§W§YSocialists Organize!§Y§W'"
-
+ww1_romania.65.t:0 "The Great War is Over!"
+ww1_romania.65.desc:0 "The Great War, a war that ravaged Europe for many years, is finally over!"
+ww1_romania.65.a:0 "Finally, let's move on."
+ROM_investigate_bureaucratic_corruption:0 "Investigate Bureaucratic Corruption"
+ROM_investigate_bureaucratic_corruption_desc:0 ""
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
@@ -5595,7 +5599,7 @@ ww1_romania.42.d:0 "Germany has sent a message informing us that they will stop 
 ww1_romania.42.a:0 "Lets not anger them..."
 ww1_romania.42.b:0 "We will find markets elsewhere, then"
 ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n\n"
-
+ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
