better tt for servia

--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -1804,10 +1804,11 @@
  SER_under_military_rule:0 "Under Military Rule"
  SER_russian_protection:0 "Russian Protection"
  SER_russian_protection_desc:0 "Our relationship with Russia is special in that we are fellow Slavic and Orthodox nations. Russia values our geopolitical position, which stretches from the Balkans to the Mediterranean, so they will actively help us if we are in a crisis."
- SER_russian_protection_tt:0 "§Y[RUS.GetFlag]Russia§! will §Rjoin any war§! where §Y[SER.GetFlag]Serbia§! finds itself on the defensive against a major nation.\n§RIf either country undergoes a significant political shift that severs their ties, this national spirit will be removed.§!"
+ SER_russian_protection_instant_desc:0 "§RIf either country undergoes a significant political shift that severs their ties, this national spirit will be removed.§!\n"
+ SER_russian_protection_tt:0 "If we get into a §Ydefensive war§! against a §Ymajor nation§!, §Y[RUS.GetNameDef]§! will §Yjoin the war§! on our side.\n"
  SER_scarred_nation:0 "Scarred Nation"
  SER_scarred_nation_desc:0 "Serbia suffered more than any other country in the Great War. Entire towns were depopulated, the country looted, hundreds of thousands died - and the ordinary Serb believes it was their fault."
- 
+
  #MEXICO
  MEX_idea_porfiriato:0 "Порфириато"
  MEX_idea_porfiriato_desc:0 "Генерал Диас установил президентскую диктатуру. Во время его правления крестьянство подвергалось угнетению, чтобы индустриализировать Мексику."
