sharifian revolt negotiations code

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4971,6 +4971,19 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.35.d:0 "As we're trying to pursue new ways to improve the education of Syria, we've sent an invite to Halide Edib Hanım to help us with women's education. Though herself agreed, the Central Committee has prevented her from departing from [TUR.capital.GetName]. Unfortunately, we won't be able to benefit from her experties."
  ottoman_syria.35.a:0 "Unfortunately, we'll have to work with what we have in our hands."
 
+ ottoman_syria.42.t:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
+ ottoman_syria.42.d:0 "As Ahmed Cemâl Paşa took it upon himself to end the Sharif Hussein's revolt, he'll be conducting negotiations with the revolt's leadership. For the duration of that, we'll be in an armistice."
+ ottoman_syria.42.a:0 "Let's see where this ends up."
+ ottoman_syria.43.t:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
+ ottoman_syria.43.d:0 "As our revolt progresses well, Ahmed Cemâl Paşa took it upon himself to negotiate with us to bring an end to this revolt. For the duration of that, we'll be in an armistice."
+ ottoman_syria.43.a:0 "Let's hear what he has to say."
+ ottoman_syria.44.t:0 "Armistice breaks between the Ottoman Empire and the Sharifian Revolt"
+ ottoman_syria.44.d:0 "Even though Ahmed Cemâl Paşa has tried to offer just demands to the revolting side, Hussein has disregarded all his offers. We have no other option but to continue the fight."
+ ottoman_syria.44.a:0 "Back to the fight."
+ ottoman_syria.45.t:0 "Armistice breaks between the Ottoman Empire and the Sharifian Revolt"
+ ottoman_syria.45.d:0 "Though Ahmed Cemâl Paşa came to negotiate with us, all he offered was to back to the status quo or worse. As we had no other option but to refuse, neither did they offered to give us what we want. We have no other option but to continue the fight."
+ ottoman_syria.45.a:0 "Back to the fight."
+
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
  ottoman..120.a:0 "On arms, brothers!"
