--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -883,7 +883,7 @@
  TUR_crippling_illiteracy_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
  TUR_crippling_illiteracy_dm:0 "£pol_idea  Crippling Illiteracy"
  TUR_crippling_illiteracy_dm_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
- TRS_crippling_illiteracy_tt:0 "[TRS_crippling_illiteracy_political_power_cost][TRS_crippling_illiteracy_monthly_population][TRS_crippling_illiteracy_conscription_factor][TRS_crippling_illiteracy_research_speed_factor][TRS_crippling_illiteracy_industrial_capacity_factory]"
+ TUR_crippling_illiteracy_tt:0 "[TRS_crippling_illiteracy_political_power_cost][TRS_crippling_illiteracy_monthly_population][TRS_crippling_illiteracy_conscription_factor][TRS_crippling_illiteracy_research_speed_factor][TRS_crippling_illiteracy_industrial_capacity_factory]"
  TRS_crippling_illiteracy_political_power_cost_yes:0 "£political_power_cost_texticon  Daily Political Power Cost: [?TUR_ci_political_power_cost|-=%%]\n"
  TRS_crippling_illiteracy_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR_ci_monthly_population|1+=%]\n"
  TRS_crippling_illiteracy_conscription_factor_yes:0 "£manpower_texticon  Recruitable Population Factor: [?TUR_ci_conscription_factor|0+%]\n"
@@ -1094,6 +1094,8 @@
  TRS_austrian_influence_desc:0 "As the Austrian backed education endeavours spread in our provinces, we see troubles with securing the loyalty of the people. We've started to see some locals siding with the foreign power rather than their own nation."
  TRS_mobile_headquarters_dm:0 "Mobile Headquarters"
  TRS_mobile_headquarters_dm_desc:0 "As Ahmed Cemâl Paşa is currently located in this province, his presence boosts friends and deters foes.\n\n§RLosing control of this state will displace Ahmed Cemâl Paşa to a random neighboring state that we control§!"
+ TRS_armistice_in_the_revolt:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
+ TRS_armistice_in_the_revolt_desc:0 "Ever since the start of the Sharifian Revolt, the bearers of the Arab Revolt flag has been struggling against their old overlords. As peace talks are underway, perhaps things could settle well."
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
